# obs-test-plugin

./: CMakeLists.txt  buildspec.json
data/effects/: tint.effect
data/locale/: en-US.ini  ja-JP.ini
src/: plugin-main.cpp  qt-tools-stub.cpp  qt-tools.cpp  tint-filter.c  tint-filter.cpp
